--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/dada-liang/read ~/scripts
+          git clone https://github.com/dada-liang/Read_dada.git ~/scripts
       - name: Use Node.js 10.x
         uses: actions/checkout@v2
 
