--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/dada-liang/Read_dada.git ~/scripts
+          git clone https://github.com/dada-liang/Read_dada.git ~/
       - name: Use Node.js 10.x
         uses: actions/checkout@v2
 
@@ -30,7 +30,6 @@ jobs:
         # youth_read.py目录自己修改
         
         run:
-         cd ~/scripts
          python3 youth.py
         # 目前最大5个账号，可按格式继续填写
         env:
