--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
       - name: 'run Youth'
         # youth_read.py目录自己修改
         run:
-          cd ~/scripts
-         python3 youth.py
+         
+         python3 scripts/youth.py
         # 目前最大5个账号，可按格式继续填写
         env:
             BARK: ${{ secrets.BARK }}  #非必须 bark通知
