--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,13 +24,15 @@ jobs:
           python-version: 3.7
 
       - name: 'Install requests'
-        run: pip install requests
+        run: 
+         cd ~/scripts
+         pip install requests
 
       - name: 'run Youth'
         # youth_read.py目录自己修改
         run:
-         
-         python3 scripts/youth.py
+         cd ~/scripts
+         python3 youth.py
         # 目前最大5个账号，可按格式继续填写
         env:
             BARK: ${{ secrets.BARK }}  #非必须 bark通知
