--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,6 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
-        run: |
-          git clone https://github.com/dada-liang/Read_dada.git ~/scripts
       - name: Use Node.js 10.x
         uses: actions/checkout@v2
 
@@ -31,8 +29,7 @@ jobs:
       - name: 'run Youth'
         # youth_read.py目录自己修改
         run:
-         cd ~/scripts
-         python3 youth.py
+         python3 woyebuzhidao/youth.py
         # 目前最大5个账号，可按格式继续填写
         env:
             BARK: ${{ secrets.BARK }}  #非必须 bark通知
